// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`view resources deleteView should resolve on success 1`] = `undefined`;

exports[`view resources fetchViewsPaginated should resolve with a View list on success 1`] = `
{
  "config": {
    "allowAbsoluteUrls": true,
    "data": undefined,
    "env": {
      "Blob": [Function],
      "FormData": [Function],
    },
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "get",
    "params": {},
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "transitional": {
      "clarifyTimeoutError": false,
      "forcedJSONParsing": true,
      "legacyInterceptorReqResOrdering": true,
      "silentJSONParsing": true,
    },
    "url": "/api/views/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": {
    "data": [
      {
        "category": null,
        "created_datetime": "2017-07-31T21:43:10.610368+00:00",
        "deactivated_datetime": null,
        "decoration": null,
        "fields": [
          "details",
          "tags",
          "customer",
          "created",
        ],
        "filters": "neq(ticket.status, "closed")",
        "filters_ast": {
          "body": [
            {
              "expression": {
                "arguments": [
                  {
                    "computed": false,
                    "loc": {
                      "end": {
                        "column": 17,
                        "line": 1,
                      },
                      "start": {
                        "column": 4,
                        "line": 1,
                      },
                    },
                    "object": {
                      "loc": {
                        "end": {
                          "column": 10,
                          "line": 1,
                        },
                        "start": {
                          "column": 4,
                          "line": 1,
                        },
                      },
                      "name": "ticket",
                      "type": "Identifier",
                    },
                    "property": {
                      "loc": {
                        "end": {
                          "column": 17,
                          "line": 1,
                        },
                        "start": {
                          "column": 11,
                          "line": 1,
                        },
                      },
                      "name": "status",
                      "type": "Identifier",
                    },
                    "type": "MemberExpression",
                  },
                  {
                    "loc": {
                      "end": {
                        "column": 27,
                        "line": 1,
                      },
                      "start": {
                        "column": 19,
                        "line": 1,
                      },
                    },
                    "raw": ""closed"",
                    "type": "Literal",
                    "value": "closed",
                  },
                ],
                "callee": {
                  "loc": {
                    "end": {
                      "column": 3,
                      "line": 1,
                    },
                    "start": {
                      "column": 0,
                      "line": 1,
                    },
                  },
                  "name": "neq",
                  "type": "Identifier",
                },
                "loc": {
                  "end": {
                    "column": 28,
                    "line": 1,
                  },
                  "start": {
                    "column": 0,
                    "line": 1,
                  },
                },
                "type": "CallExpression",
              },
              "loc": {
                "end": {
                  "column": 28,
                  "line": 1,
                },
                "start": {
                  "column": 0,
                  "line": 1,
                },
              },
              "type": "ExpressionStatement",
            },
          ],
          "loc": {
            "end": {
              "column": 28,
              "line": 1,
            },
            "start": {
              "column": 0,
              "line": 1,
            },
          },
          "sourceType": "script",
          "type": "Program",
        },
        "group_by": null,
        "id": 7,
        "name": "New & Open Tickets",
        "order_by": "updated",
        "order_dir": "desc",
        "search": null,
        "section_id": null,
        "slug": "new-&-open-tickets",
        "type": "ticket-list",
        "uri": "/api/views/7/",
        "visibility": "public",
        "with_highlights": true,
      },
      {
        "category": null,
        "created_datetime": "2017-07-31T21:43:10.610368+00:00",
        "deactivated_datetime": null,
        "decoration": null,
        "fields": [
          "details",
          "tags",
          "customer",
          "created",
        ],
        "filters": "neq(ticket.status, "closed")",
        "filters_ast": {
          "body": [
            {
              "expression": {
                "arguments": [
                  {
                    "computed": false,
                    "loc": {
                      "end": {
                        "column": 17,
                        "line": 1,
                      },
                      "start": {
                        "column": 4,
                        "line": 1,
                      },
                    },
                    "object": {
                      "loc": {
                        "end": {
                          "column": 10,
                          "line": 1,
                        },
                        "start": {
                          "column": 4,
                          "line": 1,
                        },
                      },
                      "name": "ticket",
                      "type": "Identifier",
                    },
                    "property": {
                      "loc": {
                        "end": {
                          "column": 17,
                          "line": 1,
                        },
                        "start": {
                          "column": 11,
                          "line": 1,
                        },
                      },
                      "name": "status",
                      "type": "Identifier",
                    },
                    "type": "MemberExpression",
                  },
                  {
                    "loc": {
                      "end": {
                        "column": 27,
                        "line": 1,
                      },
                      "start": {
                        "column": 19,
                        "line": 1,
                      },
                    },
                    "raw": ""closed"",
                    "type": "Literal",
                    "value": "closed",
                  },
                ],
                "callee": {
                  "loc": {
                    "end": {
                      "column": 3,
                      "line": 1,
                    },
                    "start": {
                      "column": 0,
                      "line": 1,
                    },
                  },
                  "name": "neq",
                  "type": "Identifier",
                },
                "loc": {
                  "end": {
                    "column": 28,
                    "line": 1,
                  },
                  "start": {
                    "column": 0,
                    "line": 1,
                  },
                },
                "type": "CallExpression",
              },
              "loc": {
                "end": {
                  "column": 28,
                  "line": 1,
                },
                "start": {
                  "column": 0,
                  "line": 1,
                },
              },
              "type": "ExpressionStatement",
            },
          ],
          "loc": {
            "end": {
              "column": 28,
              "line": 1,
            },
            "start": {
              "column": 0,
              "line": 1,
            },
          },
          "sourceType": "script",
          "type": "Program",
        },
        "group_by": null,
        "id": 7,
        "name": "New & Open Tickets",
        "order_by": "updated",
        "order_dir": "desc",
        "search": null,
        "section_id": null,
        "slug": "new-&-open-tickets",
        "type": "ticket-list",
        "uri": "/api/views/7/",
        "visibility": "public",
        "with_highlights": true,
      },
      {
        "category": null,
        "created_datetime": "2017-07-31T21:43:10.610368+00:00",
        "deactivated_datetime": null,
        "decoration": null,
        "fields": [
          "details",
          "tags",
          "customer",
          "created",
        ],
        "filters": "neq(ticket.status, "closed")",
        "filters_ast": {
          "body": [
            {
              "expression": {
                "arguments": [
                  {
                    "computed": false,
                    "loc": {
                      "end": {
                        "column": 17,
                        "line": 1,
                      },
                      "start": {
                        "column": 4,
                        "line": 1,
                      },
                    },
                    "object": {
                      "loc": {
                        "end": {
                          "column": 10,
                          "line": 1,
                        },
                        "start": {
                          "column": 4,
                          "line": 1,
                        },
                      },
                      "name": "ticket",
                      "type": "Identifier",
                    },
                    "property": {
                      "loc": {
                        "end": {
                          "column": 17,
                          "line": 1,
                        },
                        "start": {
                          "column": 11,
                          "line": 1,
                        },
                      },
                      "name": "status",
                      "type": "Identifier",
                    },
                    "type": "MemberExpression",
                  },
                  {
                    "loc": {
                      "end": {
                        "column": 27,
                        "line": 1,
                      },
                      "start": {
                        "column": 19,
                        "line": 1,
                      },
                    },
                    "raw": ""closed"",
                    "type": "Literal",
                    "value": "closed",
                  },
                ],
                "callee": {
                  "loc": {
                    "end": {
                      "column": 3,
                      "line": 1,
                    },
                    "start": {
                      "column": 0,
                      "line": 1,
                    },
                  },
                  "name": "neq",
                  "type": "Identifier",
                },
                "loc": {
                  "end": {
                    "column": 28,
                    "line": 1,
                  },
                  "start": {
                    "column": 0,
                    "line": 1,
                  },
                },
                "type": "CallExpression",
              },
              "loc": {
                "end": {
                  "column": 28,
                  "line": 1,
                },
                "start": {
                  "column": 0,
                  "line": 1,
                },
              },
              "type": "ExpressionStatement",
            },
          ],
          "loc": {
            "end": {
              "column": 28,
              "line": 1,
            },
            "start": {
              "column": 0,
              "line": 1,
            },
          },
          "sourceType": "script",
          "type": "Program",
        },
        "group_by": null,
        "id": 7,
        "name": "New & Open Tickets",
        "order_by": "updated",
        "order_dir": "desc",
        "search": null,
        "section_id": null,
        "slug": "new-&-open-tickets",
        "type": "ticket-list",
        "uri": "/api/views/7/",
        "visibility": "public",
        "with_highlights": true,
      },
    ],
  },
  "headers": {},
  "request": {
    "responseURL": "/api/views/",
  },
  "status": 200,
}
`;

exports[`view resources updateView should resolve with an updated View on success 1`] = `
{
  "category": null,
  "created_datetime": "2017-07-31T21:43:10.610368+00:00",
  "deactivated_datetime": null,
  "decoration": null,
  "fields": [
    "details",
    "tags",
    "customer",
    "created",
  ],
  "filters": "neq(ticket.status, "closed")",
  "filters_ast": {
    "body": [
      {
        "expression": {
          "arguments": [
            {
              "computed": false,
              "loc": {
                "end": {
                  "column": 17,
                  "line": 1,
                },
                "start": {
                  "column": 4,
                  "line": 1,
                },
              },
              "object": {
                "loc": {
                  "end": {
                    "column": 10,
                    "line": 1,
                  },
                  "start": {
                    "column": 4,
                    "line": 1,
                  },
                },
                "name": "ticket",
                "type": "Identifier",
              },
              "property": {
                "loc": {
                  "end": {
                    "column": 17,
                    "line": 1,
                  },
                  "start": {
                    "column": 11,
                    "line": 1,
                  },
                },
                "name": "status",
                "type": "Identifier",
              },
              "type": "MemberExpression",
            },
            {
              "loc": {
                "end": {
                  "column": 27,
                  "line": 1,
                },
                "start": {
                  "column": 19,
                  "line": 1,
                },
              },
              "raw": ""closed"",
              "type": "Literal",
              "value": "closed",
            },
          ],
          "callee": {
            "loc": {
              "end": {
                "column": 3,
                "line": 1,
              },
              "start": {
                "column": 0,
                "line": 1,
              },
            },
            "name": "neq",
            "type": "Identifier",
          },
          "loc": {
            "end": {
              "column": 28,
              "line": 1,
            },
            "start": {
              "column": 0,
              "line": 1,
            },
          },
          "type": "CallExpression",
        },
        "loc": {
          "end": {
            "column": 28,
            "line": 1,
          },
          "start": {
            "column": 0,
            "line": 1,
          },
        },
        "type": "ExpressionStatement",
      },
    ],
    "loc": {
      "end": {
        "column": 28,
        "line": 1,
      },
      "start": {
        "column": 0,
        "line": 1,
      },
    },
    "sourceType": "script",
    "type": "Program",
  },
  "group_by": null,
  "id": 7,
  "name": "foo",
  "order_by": "updated",
  "order_dir": "desc",
  "search": null,
  "section_id": null,
  "slug": "new-&-open-tickets",
  "type": "ticket-list",
  "uri": "/api/views/7/",
  "visibility": "public",
  "with_highlights": true,
}
`;

exports[`view resources updateView should resolve with an updated View on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [
    {
      "allowAbsoluteUrls": true,
      "data": "{"category":null,"order_by":"updated","deactivated_datetime":null,"name":"foo","slug":"new-&-open-tickets","uri":"/api/views/7/","decoration":null,"created_datetime":"2017-07-31T21:43:10.610368+00:00","group_by":null,"with_highlights":true,"fields":["details","tags","customer","created"],"section_id":null,"type":"ticket-list","filters":"neq(ticket.status, \\"closed\\")","order_dir":"desc","visibility":"public","id":7,"shared_with_teams":[1],"shared_with_users":[1]}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/views/7/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "unlink": [],
}
`;
